# 6.824

./: .gitignore  CMakeLists.txt  eventfdTest.cpp  logger.cpp  logger.hpp  loggertest  loggertest.cpp  test.cpp  test1
.cache/clangd/index/: LogEntry.hpp.18DC8A86FD59A002.idx  Map.cpp.2CAA18585D0E6C30.idx  Map.hpp.7F2C8AEC698924C6.idx  Mapexam.cpp.2B7FCFCCDA8B9373.idx  Reduce.cpp.117EFCA90B0C2523.idx  Reduce.hpp.FC1556D6B738E97B.idx  Reduceexam.cpp.A4062548B7C2BA55.idx  Serializer.hpp.AB93B8800BEF4EC6.idx  buttonrpc.hpp.597EF839BE37FAE2.idx  keyValue.hpp.1D07B01B817B2F22.idx  logger.cpp.944DE1645D181BFA.idx  logger.hpp.9F7B4CC47E385CAD.idx  main_client.cpp.FA37E5D3BDD9B15D.idx  main_server.cpp.B1834CD09098F22D.idx  master.cpp.B72C25115CFA9AF9.idx  master.h.95E7DD6D1CBC45C1.idx  master.hpp.CA13C076F458637B.idx  masterExam.cpp.3FC45AC2A95E2E03.idx  persister.hpp.05728032EA479AC6.idx  raft.cpp.3FCAFEC9124DE93D.idx  raft.hpp.E4D798F13320EC74.idx  (+5 more)
MapReduce/: CMakeLists.txt  Map.cpp  Map.hpp  Mapexam.cpp  Reduce.cpp  Reduce.hpp  Reduceexam.cpp  exam  keyValue.hpp  master.cpp  master.h  masterExam.cpp  test  worker.cpp  worker.hpp
MapReduce/oldsolution/: locker.hpp  map_reduceFun.cpp  map_reduceFun.h  master.cpp  master.hpp  worker.cpp  worker.hpp
Raft/: CMakeLists.txt  LogEntry.hpp  cli  event  persister.hpp  raft.cpp  raft.hpp  rafttest.cpp  ser  tempCodeRunnerFile.cpp  testbtt_cli.cpp  testbtt_ser.cpp
buttonrpc-master/: Serializer.hpp  buttonrpc.hpp
buttonrpc-master/example/: main_client.cpp  main_server.cpp
test/settime/: con_wait  con_wait.cc
